# AI-video-animation

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.remotion  LICENSE  README.md  WARNINGS.txt  bootstrap.txt  courses.json  docker-compose.cloud.yml  docker-compose.prod.yml  docker-compose.runpod.yml  docker-compose.yml  gui-server.js  launch.ps1  launch.sh  package-lock.json  package.json  remotion.config.ts  start-all.ps1  start-all.sh  start.sh  stop.ps1  stop.sh  tsconfig.json  video.pem  voice-settings.json
public/lab_resources/: .env.example  README.md  pyproject.toml  run_lab.py
public/lab_resources/lab10_1/: main.py
public/lab_resources/lab10_2/: main.py
public/lab_resources/lab10_3/: main.py
public/lab_resources/lab1_1/: main.py
public/lab_resources/lab1_2/: main.py
public/lab_resources/lab2_1/: main.py
public/lab_resources/lab3_1/: main.py  tests.py
public/lab_resources/lab4_1/: Dockerfile  app.py  run_server.py
public/lab_resources/lab5_1/: main.py
public/lab_resources/lab5_2/: main.py
public/lab_resources/lab6_1/: main.py
public/lab_resources/lab7_1/: guardrails_demo.py  main.py  nim_client_demo.py
public/lab_resources/lab8_1/: main.py
public/lab_resources/lab9_1/: main.py
public/lab_resources/lab_capstone/: Dockerfile
public/lab_resources/lab_capstone/app/: __init__.py  api.py  pipeline.py
public/lab_resources/src/agentic_core/: __init__.py  agents.py  config.py  embeddings.py  eval_pipeline.py  guardrails_integration.py  llm_client.py  memory_store.py  monitoring.py  orchestrator.py  planning.py  policy.py  (+3 more)
(+1280 files in other folders)
