[project]
name = "agentic-ai-course"
version = "0.1.0"
description = "Agentic AI Engineering course: autonomous LLM agents, deployment, and NVIDIA exam prep."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "litellm>=1.40.0",
    "loguru>=0.7.0",
    "typer>=0.12.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.0",
    "duckdb>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "prometheus-client>=0.20.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
    "black",
    "ruff",
    "mypy",
]
nvidia = [
    "nemo-guardrails>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
